turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: value lenght is not a member of object Array
for (i <-0 to Array.lenght-2){
                    ^